framec/tests/snapshots/gdscript_snapshots__async_attribute.snap
---
source: framec/tests/gdscript_snapshots.rs
expression: "compile_fixture(\"14_async_attribute\", \"gdscript\")"
---
class Cache:
    func get(k):
        return "v:" + k

class AsyncFetcherFrameEvent:
    var _message
    var _parameters

    func _init(message: String, parameters):
        self._message = message
        self._parameters = parameters


class AsyncFetcherFrameContext:
    var event
    var _return
    var _data
    var _transitioned

    func _init(event: AsyncFetcherFrameEvent, default_return):
        self.event = event
        self._return = default_return
        self._data = {}
        self._transitioned = false


class AsyncFetcherCompartment:
    var state
    var state_args
    var state_vars
    var enter_args
    var exit_args
    var forward_event
    var parent_compartment

    func _init(state: String, parent_compartment = null):
        self.state = state
        self.state_args = []
        self.state_vars = {}
        self.enter_args = []
        self.exit_args = []
        self.forward_event = null
        self.parent_compartment = parent_compartment

    func copy() -> AsyncFetcherCompartment:
        var c = AsyncFetcherCompartment.new(self.state, self.parent_compartment)
        c.state_args = self.state_args.duplicate()
        c.state_vars = self.state_vars.duplicate()
        c.enter_args = self.enter_args.duplicate()
        c.exit_args = self.exit_args.duplicate()
        c.forward_event = self.forward_event
        return c


class AsyncFetcher:
    var machine
    var busy
    var in_flight

    func _init():
        self.machine = _AsyncFetcherMachine.new()
        self.busy = false
        self.in_flight = null

    static func _create():
        var c = AsyncFetcher.new()
        return c

    func fetch(key: String) -> String:
        if self.busy:
            push_error("E703: system busy: cannot enter 'fetch' while '%s' is in flight" % str(self.in_flight))
            return ""
        self.busy = true
        self.in_flight = "fetch"
        var __result = await self.machine.fetch(key)
        self.in_flight = null
        self.busy = false
        return __result

    func init():
        await self.machine.init()


class _AsyncFetcherMachine:
    var _state_stack
    var __compartment
    var __next_compartment
    var _context_stack
    var cache = null

    func _init():
        self._state_stack = []
        self._context_stack = []
        self.__compartment = self.__prepareEnter("Ready", [], [])
        self.__next_compartment = null

    static func _create():
        var c = _AsyncFetcherMachine.new()
        return c

    func hsm_chain() -> Dictionary:
        return {
            "Ready": ["Ready"],
        }
    func __prepareEnter(leaf, state_args, enter_args):
        var comp = null
        for name in self.hsm_chain()[leaf]:
            var new_comp = AsyncFetcherCompartment.new(name)
            new_comp.state_args = state_args.duplicate()
            new_comp.enter_args = enter_args.duplicate()
            new_comp.parent_compartment = comp
            comp = new_comp
        return comp

    func __prepareExit(exit_args):
        var comp = self.__compartment
        while comp != null:
            comp.exit_args = exit_args.duplicate()
            comp = comp.parent_compartment

    func __kernel(__e):
        # Route event to current state
        await self.__router(__e)
        # Drain any transitions queued by the handler
        while self.__next_compartment != null:
            var next_compartment = self.__next_compartment
            self.__next_compartment = null
            # Exit the current (leaf) state
            await self.__router(AsyncFetcherFrameEvent.new("<$", self.__compartment.exit_args))
            # Switch to the new compartment
            self.__compartment = next_compartment
            if next_compartment.forward_event == null:
                # No forwarded event — synthesize a fresh $>
                await self.__router(AsyncFetcherFrameEvent.new("$>", self.__compartment.enter_args))
            else:
                if next_compartment.forward_event._message == "$>":
                    # Forwarded event IS $> — dispatch directly so the
                    # destination's $> receives the caller's payload
                    await self.__router(next_compartment.forward_event)
                else:
                    # Forwarded event is not $> — initialize the destination
                    # with a fresh $>, then dispatch the forward to it
                    await self.__router(AsyncFetcherFrameEvent.new("$>", self.__compartment.enter_args))
                    await self.__router(next_compartment.forward_event)
            next_compartment.forward_event = null
            # Mark all stacked contexts as transitioned
            for ctx in self._context_stack:
                ctx._transitioned = true

    func __router(__e):
        if self.__compartment.state == "Ready":
            await self._state_Ready(__e, self.__compartment)

    func __transition(next_compartment):
        self.__next_compartment = next_compartment

    func fetch(key: String) -> String:
        var __e = AsyncFetcherFrameEvent.new("fetch", [key])
        var __ctx = AsyncFetcherFrameContext.new(__e, null)
        self._context_stack.append(__ctx)
        await self.__kernel(__e)
        return self._context_stack.pop_back()._return

    func _state_Ready(__e, compartment):
        if __e._message == "fetch":
            await self._s_Ready_hdl_user_fetch(__e, compartment)
            return

    func _s_Ready_hdl_user_fetch(__e, compartment):
        var key = __e._parameters[0]
        self._context_stack[-1]._return = self.cache.get(key)

    func init():
        var __e = AsyncFetcherFrameEvent.new("$>", [])
        var __ctx = AsyncFetcherFrameContext.new(__e, null)
        self._context_stack.append(__ctx)
        await self.__kernel(__e)
        self._context_stack.pop_back()
